# ntptimed

./: CMakeLists.txt  README  crc8.c  crc8.h  delta_plot.py  ntptime.c  ntptime.h  ntptime.i  ntptime.py  ntptime_client.c  ntptimed.c  plot_ntptimed_ts.py  plot_sync_ts.py  sdummy.c
test/: simple.c  test.py  test_low_level.py  test_send.c  test_sync_ts.c
